# viscap_pixhawk

./: CMakeLists.txt  CMakeLists.txt~  package.xml
launch/: connect_to_pixhawk.launch  connect_to_pixhawk.launch~  gazebo.launch  pixhawk.launch  teste.launch  teste.launch~
src/: change_mode.cpp  change_mode.cpp~  voo_quadrado.cpp  voo_quadrado.cpp~
